--- a/client/src/style/style.css
+++ b/client/src/style/style.css
@@ -36,7 +36,12 @@ body {
     margin-top: 25px;
   }
   #addGameButton {
-    margin-top: 10px;
+    margin-right: 30px;
+    margin-top: 30px;
+  }
+  #addPlayerButton {
+    margin-left: 30px;
+    margin-top: 30px;
   }
 }
 
