--- a/client/src/style/style.css
+++ b/client/src/style/style.css
@@ -31,6 +31,14 @@ body {
   color: black;
 }
 
+#rank,
+#opponent,
+#elo,
+#winRate,
+#winLoss {
+  width: 20%;
+}
+
 @media only screen and (max-width: 768px) {
   .second {
     margin-top: 25px;
@@ -43,10 +51,41 @@ body {
     margin-left: 30px;
     margin-top: 30px;
   }
+
+  #rank,
+  #opponent,
+  #elo {
+    width: 25%;
+  }
+
+  #winRate {
+    width: 25%;
+  }
+
+  #winLoss {
+    display: none;
+    visibility: hidden;
+    position: absolute;
+    left: -9999px;
+  }
 }
 
 @media only screen and (max-width: 430px) {
   #champions {
     padding-bottom: 140px;
+  }
+
+  body #rank,
+  #opponent,
+  #elo {
+    width: 33%;
+  }
+
+  #winRate,
+  #winLoss {
+    display: none;
+    visibility: hidden;
+    position: absolute;
+    left: -9999px;
   }
 }
