made date dissapear on small screens

--- a/client/src/style/style.css
+++ b/client/src/style/style.css
@@ -82,7 +82,8 @@ body {
   }
 
   #winRate,
-  #winLoss {
+  #winLoss,
+  #gameDate {
     display: none;
     visibility: hidden;
     position: absolute;
