--- a/client/src/style/style.css
+++ b/client/src/style/style.css
@@ -10,7 +10,7 @@
 
 body {
   color: white;
-  background-image: url("../images/foosball_background.jpg");
+  background-image: url('../images/foosball_background.jpg');
   background-size: cover;
   background-position: center center;
   background-attachment: fixed;
@@ -36,7 +36,7 @@ body {
 #elo,
 #winRate,
 #winLoss {
-  width: 20%;
+  width: 25%;
 }
 
 @media only screen and (max-width: 768px) {
